# ua-batteries

./: .gitignore  MANIFEST.in  README.md  battery_schedule_April_2025_6_max_buys.html  battery_schedule_August_2025_6_max_buys.html  battery_schedule_December_2024_6_max_buys.html  battery_schedule_February_2025_6_max_buys.html  battery_schedule_January_2025_6_max_buys.html  battery_schedule_July_2025_6_max_buys.html  battery_schedule_June_2025_6_max_buys.html  battery_schedule_March_2025_6_max_buys.html  battery_schedule_May_2025_6_max_buys.html  battery_schedule_November_2024_6_max_buys.html  battery_schedule_October_2024_6_max_buys.html  battery_schedule_October_2025_6_max_buys.html  battery_schedule_Sept25Test_6_max_buys.html  battery_schedule_September_2025_6_max_buys.html  battery_schedule_September_2025_testrun_6_max_buys.html  battery_schedule_heat_table.html  battery_schedule_heat_table_new_style.html  battery_schedule_heat_table_new_style_vf.html  monthly_profit_overview.html  notes_to_delete.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  testing_file.py  tox.ini
archive/: battery_schedule_April_2025_6_max_buys.html  battery_schedule_August_2025_6_max_buys.html  battery_schedule_December_2024_6_max_buys.html  battery_schedule_February_2025_6_max_buys.html  battery_schedule_January_2025_6_max_buys.html  battery_schedule_July_2025_6_max_buys.html  battery_schedule_June_2025_6_max_buys.html  battery_schedule_March_2025_6_max_buys.html  battery_schedule_May_2025_6_max_buys.html  battery_schedule_November_2024_6_max_buys.html  battery_schedule_October_2024_6_max_buys.html  battery_schedule_October_2025_4_max_buys.html  battery_schedule_October_2025_6_max_buys.html  battery_schedule_October_2025_8_max_buys.html  battery_schedule_Sept25Test_6_max_buys.html  battery_schedule_September_2025_6_max_buys.html  battery_schedule_September_2025_testrun_6_max_buys.html  battery_schedule_heat_table.html  battery_schedule_heat_table_new_style.html  battery_schedule_heat_table_new_style_vf.html  battery_schedule_v2_October_2025_4_must_buys.html  battery_schedule_v3_October_2025_4_max_buys.html  monthly_profit_overview.html
file_downloads/: 20260225_225720_oree_prices_02_2026.csv  20260310_195132_oree_prices_03_2026.csv  20260321_105409_oree_prices_03_2026.csv  20260321_113833_oree_prices_03_2026.csv  20260321_121707_oree_prices_03_2026.csv  Energy Trading Optimization - February 2026.xlsx  Energy Trading Optimization - March 2025.xlsx  Energy Trading Optimization - March 2026.xlsx  FAIL_ON_NAN_VALUES_05_2025.csv  file_update_tracker.txt  test_delete.ipynb
tests/: README.md  __init__.py  conftest.py  test_assumptions.py  test_get_file.py  test_main.py  test_total_price.py  test_visualization.py
ua_batteries/: __init__.py  algo.py  assumptions.py  config.py  main.py  visualization.py
ua_batteries/utils/: __init__.py  get_file.py  total_price.py
ua_batteries/web/: __init__.py  app.py
ua_batteries/web/static/: styles.css
ua_batteries/web/templates/: index.html
