[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ua-batteries"
version = "0.1.0"
description = "Automating production of optimal times to buy/sell energy from Ukrainian government with user-determined buy/sell cycle setup"
readme = "README.md"
requires-python = ">=3.10"

authors = [{name = "Roman Demianovych", email = "roman.demianovych@gmail.com"}]

dependencies = [
    "requests>=2.32,<3.0",
    "pandas>=2.1,<3.0",
    "beautifulsoup4>=4.14,<5.0",
    "lxml>=4.9,<5.0",
    "numpy>=1.24,<3.0"
    ]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "flake8-docstrings>=1.7",
    "pep8-naming>=0.13"
    ]

[tool.flake8]
max-line-length = 120

[tool.setuptools.packages.find]
where = ["."]
include = ["ua_batteries*"]
