[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools>=61",
]

[project]
name = "ua-batteries"
version = "0.1.0"
description = "Automating production of optimal times to buy/sell energy from Ukrainian government..."
readme = "README.md"
authors = [ { name = "Roman Demianovych", email = "roman.demianovych@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "beautifulsoup4>=4.14,<5",
  "certifi>=2024",
  "lxml>=4.9,<5",
  "numpy>=1.24,<3",
  "pandas>=2.1,<3",
  "pulp>=3.3,<3.4",
  "requests>=2.32,<3",
]

optional-dependencies.lint = [
  "mypy==1.11",
  "pyproject-fmt>=2.1.4",
  "ruff>=0.5.1",
]
optional-dependencies.test = [
  "pytest>=8",
  "pytest-cov>=4",
]

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "ua_batteries*" ]

[tool.ruff]
target-version = "py312"
line-length = 120

lint.select = [
  "D",
  "E",
  "F",
  "I",
  "N",
]
lint.ignore = [
  "D203",
  "D213",
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
addopts = "-v --tb=short"

[tool.coverage.run]
source = [ "ua_batteries" ]
omit = [
  "*/tests/*",
  "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
